--- a/index.html
+++ b/index.html
@@ -85,24 +85,24 @@
                 </div>
                 <div class="tab-item ">
                     <span class="material-icons-sharp">perm_identity</span>
-                    <h3>Customers</h3>
+                    <h3>Connection</h3>
                 </div>
                 <div class="tab-item ">
                     <span class="material-icons-sharp">receipt_long</span>
-                    <h3>Orders</h3>
+                    <h3>Subscribe</h3>
                 </div>
                 <div class="tab-item ">
                     <span class="material-icons-sharp">insights</span>
-                    <h3>Analytics</h3>
+                    <h3>Monitoring</h3>
                 </div>
                 <div class="tab-item ">
                     <span class="material-icons-sharp">mail_outline</span>
-                    <h3>Messages</h3>
-                    <span class="message-count">26</span>
+                    <h3>Received the news</h3>
+                    <span class="message-count">0</span>
                 </div>
                 <div class="tab-item ">
                     <span class="material-icons-sharp">inventory </span>
-                    <h3>Products</h3>
+                    <h3>Operation log</h3>
                 </div>
                 <div class="tab-item ">
                     <span class="material-icons-sharp">report_gmailerrorred </span>
@@ -432,6 +432,18 @@
 
                     </div>
                 </div>
+                <div class="tab-pane">
+                    <div class="layui-tab-item">
+                        <textarea id="rcv" placeholder="Received the news" class="layui-textarea"
+                            style="height:600px"></textarea>
+                    </div>
+                </div>
+                <div class="tab-pane">
+                    <div class="layui-tab-item">
+                        <textarea id="log" placeholder="Operation Log" class="layui-textarea"
+                            style="height:600px"></textarea>
+                    </div>
+                </div>
             </div>
         </main>
         <!----------------------------- END OF MAIN -------------------->
@@ -531,7 +543,6 @@
     </div>
     <!-- </div> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
-
 
     <script src="mqtt.js" type="text/javascript">
 
